--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   # https://pub.dev/packages/flutter_native_splash
   flutter_native_splash: ^2.3.9
+  json_annotation: ^4.8.1
 
 flutter_launcher_icons:
   android: "ic_launcher"
@@ -73,6 +74,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
