--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
 
   # https://pub.dev/packages/dio
   dio: ^5.4.0
+  # https://pub.dev/packages/pretty_dio_logger
+  pretty_dio_logger: ^1.3.1
   
   # https://pub.dev/packages/flutter_launcher_icons
   flutter_launcher_icons: ^0.13.1
