--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cookie_jar: ^4.0.8
   # https://pub.dev/packages/dio_cookie_manager
   dio_cookie_manager: ^3.1.1
+  # https://pub.dev/packages/path_provider
+  path_provider: ^2.1.2
   
   # https://pub.dev/packages/flutter_launcher_icons
   flutter_launcher_icons: ^0.13.1
